--- a/_config/fieldsets/work.yaml
+++ b/_config/fieldsets/work.yaml
@@ -68,5 +68,6 @@ fields:
     destination: _themes/mattsoria/img/work
   content:
     type: redactor
+    image_dir: _themes/mattsoria/img/work
 
 hide: true
