--- a/_themes/mattsoria/package.json
+++ b/_themes/mattsoria/package.json
@@ -6,7 +6,9 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-imagemin": "~0.4.0"
+    "grunt-contrib-imagemin": "~0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-uncss": "~0.1.9"
   },
   "dependencies": {
     "load-grunt-tasks": "~0.2.0"
