--- a/_config/dashboard.yaml
+++ b/_config/dashboard.yaml
@@ -1,6 +1,6 @@
 dashboard_main_content: >
-  <h1>Replace this if you want to customize your dashboard's content</h1>
-  <p>Hello wilderness.</p>
+  <h1>This is your admin dood!</h1>
+  <p>Get to work.</p>
 
 dashboard_sidebar_content: >
   <h2>Useful Links</h2>
@@ -8,5 +8,6 @@ dashboard_sidebar_content: >
     <li><a href="http://statamic.com">Statamic.com</a></li>
     <li><a href="http://twitter.com/statamic">Statamic on Twitter</a></li>
     <li><a href="http://facebook.com/statamic">Statamic on Facebook</a></li>
+    <li><a href="http://statamic.github.io/statamic-cheat-sheet/">Statamic cheat-sheet</a></li>
   </ul>
   <a href="http://statamic.tenderapp.com" class="btn full-width">Get Statamic Support</a>
