--- a/_config/fieldsets/page.yaml
+++ b/_config/fieldsets/page.yaml
@@ -1,6 +1,16 @@
 title: Standard Page
 
+include:
+  - seo
+
 fields:
+
+  seo-title:
+    display: SEO fields
+    required: false
+    default:
+    type: seo
+
   _template:
     display: Template
     type: templates
