--- a/_config/fieldsets/play.yaml
+++ b/_config/fieldsets/play.yaml
@@ -1,4 +1,13 @@
+include:
+  - seo
+
 fields:
+
+  seo-title:
+    display: SEO fields
+    required: false
+    default:
+    type: seo
   _template:
     display: Template
     type: templates
